Fix matrix image too small

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ body {
 /* Showcase Section */
 
 #showcase {
-    background: url('../images/matrix-background.jpg') fixed no-repeat bottom/300%;
+    background: url('../images/matrix-background.jpg') fixed no-repeat bottom/325%;
     height: 520px;
 }
 
